0025938: BRepBuilderAPI_Transform is not thread safe

ModifiedShape() method is made returning shape by value, not by reference.